# haskell-rummy

./: .travis.yml  LICENSE  README.md  card.cabal
src/: Main.hs
src/lib/: .Rummy.hs.swp  Deck.hs  Rummy.hs
test/: test.hs
