name:                card
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/card#readme
license:             BSD3
license-file:        LICENSE
author:              Glade Diviney
maintainer:          glade@diviney.us
copyright:           2017 Glade Diviney
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Deck
                     , Rummy
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , array >= 0.5
                     , containers >= 0.4

executable card
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , card
                     , random >= 1.1

test-suite test
  default-language:    Haskell2010
  main-is:             test.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.7
                     , tasty-quickcheck >= 0.8
                     , QuickCheck >= 2.8
                     , tasty-hunit >= 0.9
                     , random >= 1.1
                     , card

